--- a/style.css
+++ b/style.css
@@ -13,24 +13,76 @@ body {
    flex-wrap: wrap;
 }
 
+.square:before {
+   position: absolute;
+   content: ' ';
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   display: none;
+   z-index: 0;
+   background-color: #000000;
+}
+
 .square {
+   position: relative;
    height: 200px;
    width: 200px;
    margin: 10px 0px;
 }
 
 #red {
-   background-color: red;
+   background: url('http://sohme.com/wp-content/uploads/2015/07/red-180x180.png');
 }
 
 #blue {
-   background-color: blue;
+   background: url('http://sohme.com/wp-content/uploads/2015/07/blue.png');
 }
 
 #green {
-   background-color: green;
+   background: url('https://www.trialsbits.co.uk/images/thick_vinyl_sheet_green.jpg');
 }
 
 #yellow {
-   background-color: yellow;
+   background: url('https://www.labelmaster.com/product/image/medium/btv06y_0.jpg');
+}
+
+.flash {
+   -webkit-animation-name: flash-animation;
+   -webkit-animation-duration: 1.5s;
+   -webkit-animation-iteration-count: 1;
+   animation-name: flash-animation;
+   animation-duration: 1.5s;
+   animation-iteration-count: 1;
+}
+
+@-webkit-keyframes flash-animation {
+   0% {
+      background-color: #ffffff;
+      opacity: 0;
+   }
+   /* 50% {
+      background-color: #ffffff;
+      opacity: 1;
+   } */
+   100% {
+      background-color: #ffffff;
+      opacity: 1;
+   }
+}
+
+@keyframes flash-animation {
+   0% {
+      background-color: #ffffff;
+      opacity: 0;
+   }
+   /* 50% {
+      background-color: #ffffff;
+      opacity: 1;
+   } */
+   100% {
+      background-color: #ffffff;
+      opacity: 1;
+   }
 }
