--- a/style.css
+++ b/style.css
@@ -5,12 +5,45 @@ body {
    height: 100vh;
 }
 
+.game-over {
+   position: absolute;
+   display: none;
+   background-color: #ffffff;
+   border-radius: 10px;
+   box-shadow: 0 8px 24px 0 rgba(151, 157, 170, 0.4), inset 0 0 1px 0 #979daa;
+   left: 0;
+   right: 0;
+   margin: 0 auto;
+   bottom: 0;
+   max-width: 80%;
+   height: fit-content;
+   top: 40%;
+   transform: translateY(-50%);
+   z-index: 30;
+   padding: 24px;
+}
+
+#sorry {
+   font-size: 25px;
+   margin-bottom: 24px;
+}
+
+#start-over {
+   display: block;
+   margin: 0 auto;
+   width: fit-content;
+   padding: 6px 18px;
+   background: green;
+   font-size: 24px;
+}
+
 .game-box {
    display: flex;
    justify-content: space-between;
    width: 420px;
    height: 420px;
    flex-wrap: wrap;
+   margin-top: 120px;
 }
 
 .square:before {
@@ -62,10 +95,7 @@ body {
       background-color: #ffffff;
       opacity: 0;
    }
-   /* 50% {
-      background-color: #ffffff;
-      opacity: 1;
-   } */
+
    100% {
       background-color: #ffffff;
       opacity: 1;
@@ -77,12 +107,12 @@ body {
       background-color: #ffffff;
       opacity: 0;
    }
-   /* 50% {
-      background-color: #ffffff;
-      opacity: 1;
-   } */
    100% {
       background-color: #ffffff;
       opacity: 1;
    }
+}
+
+#start-game {
+   margin-top: 30px;
 }
