--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@ body {
    align-content: center;
    flex-direction: column;
    height: 100vh;
-   padding: 48px;
+   max-width: 600px;
+   margin: 0 auto;
    background-color: aliceblue;
+   padding: 0 24px;
 }
 
 .game-over {
@@ -24,6 +26,23 @@ body {
    transform: translateY(-50%);
    z-index: 30;
    padding: 24px;
+}
+
+.header {
+   background-color: #ffffff;
+   box-shadow: 0 8px 24px 0 rgba(151, 157, 170, 0.4), inset 0 0 1px 0 #979daa;
+   border-radius: 12px;
+   margin: 24px auto;
+   width: 100%;
+}
+
+h1 {
+   width: 100%;
+   text-align: center;
+   font-size: 48px;
+   letter-spacing: 4px;
+   font-family: 'Luckiest Guy', cursive;
+   margin: 32px 0 18px 0;
 }
 
 #sorry {
@@ -45,24 +64,47 @@ body {
    justify-content: space-between;
    width: 100%;
    height: 100%;
-   max-width: 720px;
-   max-height: 720px;
+   max-width: 600px;
+   max-height: 600px;
    flex-wrap: wrap;
    margin: 0 auto;
    position: relative;
    background-color: #ffffff;
-   padding: 1%;
    border-radius: 20px;
    box-shadow: 0 8px 24px 0 rgba(151, 157, 170, 0.4), inset 0 0 1px 0 #979daa;
+   overflow: hidden;
 }
 
 .container {
    width: 420px;
    margin: 12px auto;
+   background-color: #ffffff;
+   box-shadow: 0 8px 24px 0 rgba(151, 157, 170, 0.4), inset 0 0 1px 0 #979daa;
+   border-radius: 12px;
+   margin: 24px auto;
+   max-width: 100%;
+   width: 100%;
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+   overflow: hidden;
 }
 
-.cats-temp {
-   display: none;
+input[type='submit'] {
+   border: none;
+   font-size: 22px;
+   width: 100%;
+   height: 80px;
+   font-family: 'Luckiest Guy', cursive;
+   margin-bottom: -12px;
+}
+
+input[type='submit']:nth-of-type(1) {
+   border-right: 1px solid #dbdee0;
+}
+
+input[type='submit']:hover {
+   background-color: aliceblue;
 }
 
 .score {
@@ -74,7 +116,7 @@ body {
    margin: 0 auto;
    left: 0;
    right: 0;
-   transform: translateY(310px);
+   transform: translateY(250px);
    display: flex;
    flex-direction: column;
    align-items: center;
@@ -83,10 +125,8 @@ body {
 
 .square {
    position: relative;
-   width: 48%;
+   width: 50%;
    height: auto;
-   margin: 1%;
-   border-radius: 20px;
 }
 
 #red {
@@ -153,6 +193,43 @@ body {
    }
 }
 
-#start-game {
-   margin-top: 30px;
+/* Titling gamebox */
+.image-shadow:after {
+   transform: scale(0.95) translateY(36px) translateZ(-30px);
+   filter: blur(20px);
+   opacity: 0.9;
+   content: '';
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   z-index: -1;
+   transition: filter 0.3s ease;
+}
+
+.image-shadow {
+   border-radius: 10px;
+   background-size: cover;
+}
+
+/* // Just for show */
+.light {
+   background: radial-gradient(ellipse at center, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 60%);
+   width: 600px;
+   height: 600px;
+   background-blend-mode: lighten;
+   position: fixed;
+   pointer-events: none;
+}
+
+/* // =========================== */
+
+.js-tilt-container {
+   transition: transform 0.1s ease;
+   transform: rotateX(0) rotateY(0);
+   transform-style: preserve-3d;
+}
+.leave {
+   transform: rotateX(0) rotateY(0) !important;
+   transition-timing-function: cubic-bezier(0.42, 0, 0, 1) !important;
+   transition-duration: 1.5s;
 }
