--- a/style.css
+++ b/style.css
@@ -1,13 +1,11 @@
 body {
    display: flex;
-   justify-content: center;
+   justify-content: flex-start;
    align-content: center;
    flex-direction: column;
    height: 100vh;
-   max-width: 600px;
-   margin: 0 auto;
+   padding: 0 1%;
    background-color: aliceblue;
-   padding: 0 24px;
 }
 
 .game-over {
@@ -20,7 +18,7 @@ body {
    right: 0;
    margin: 0 auto;
    bottom: 0;
-   max-width: 80%;
+   max-width: 50%;
    height: fit-content;
    top: 40%;
    transform: translateY(-50%);
@@ -29,82 +27,138 @@ body {
 }
 
 .header {
-   background-color: #ffffff;
-   box-shadow: 0 8px 24px 0 rgba(151, 157, 170, 0.4), inset 0 0 1px 0 #979daa;
-   border-radius: 12px;
-   margin: 24px auto;
-   width: 100%;
+   background-color: transparent;
+   margin-top: 0px;
+   margin-left: -8px;
+   margin-bottom: 32px;
+   max-width: 100%;
+}
+
+.first {
+   position: relative;
+   text-align: left;
+   color: #6fd956;
+   top: 6px;
+   left: 16px;
+}
+
+.second {
+   position: relative;
+   margin-top: -86px;
+   left: 16px;
+   color: #ff4942;
+}
+
+.third {
+   position: relative;
+   margin-top: -86px;
+   left: 8px;
+   color: #fff464;
+}
+
+.fourth {
+   position: relative;
+   margin-top: -86px;
+   left: 12px;
+   color: #465aff;
+   opacity: 0.8;
 }
 
 h1 {
-   width: 100%;
-   text-align: center;
-   font-size: 48px;
-   letter-spacing: 4px;
-   font-family: 'Luckiest Guy', cursive;
-   margin: 32px 0 18px 0;
+   font-size: 72px;
+   font-family: Verdana, serif;
+   margin: 0 auto;
+   letter-spacing: 6px;
 }
 
 #sorry {
-   font-size: 25px;
+   font-size: 22px;
    margin-bottom: 24px;
+   font-family: Verdana, serif;
+   display: flex;
+   flex-wrap: wrap;
 }
 
-#start-over {
+#sorry span:nth-of-type(1) {
+   flex-basis: 100%;
+}
+
+.start-over {
    display: block;
-   margin: 0 auto;
+   margin: 24px auto 0;
    width: fit-content;
-   padding: 6px 18px;
-   background: green;
-   font-size: 24px;
+   background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
+   padding: 8px 12px;
+   text-transform: uppercase;
+   border-radius: 4px;
+   font-weight: bold;
+   letter-spacing: -1px;
+   font-size: 20px;
+}
+
+.start-over:hover {
+   cursor: pointer;
+}
+
+#real-answer {
+   font-weight: 900;
 }
 
 .game-box {
    display: flex;
    justify-content: space-between;
-   width: 100%;
-   height: 100%;
-   max-width: 600px;
-   max-height: 600px;
+   max-width: 100%;
+   max-height: 100%;
+   width: 600px;
+   height: 600px;
    flex-wrap: wrap;
    margin: 0 auto;
    position: relative;
    background-color: #ffffff;
-   border-radius: 20px;
    box-shadow: 0 8px 24px 0 rgba(151, 157, 170, 0.4), inset 0 0 1px 0 #979daa;
    overflow: hidden;
 }
 
 .container {
-   width: 420px;
-   margin: 12px auto;
-   background-color: #ffffff;
-   box-shadow: 0 8px 24px 0 rgba(151, 157, 170, 0.4), inset 0 0 1px 0 #979daa;
-   border-radius: 12px;
-   margin: 24px auto;
-   max-width: 100%;
+   margin: 32px auto 12px;
+   max-width: 600px;
    width: 100%;
    display: flex;
+   flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
-   overflow: hidden;
+   box-sizing: content-box;
 }
 
-input[type='submit'] {
+.button {
    border: none;
    font-size: 22px;
-   width: 100%;
-   height: 80px;
-   font-family: 'Luckiest Guy', cursive;
-   margin-bottom: -12px;
+   text-align: center;
+   padding: 12px 0px;
+   font-family: Verdana, serif;
+   font-weight: 900;
+   letter-spacing: -1px;
+   text-transform: uppercase;
+   color: #465aff;
+   mix-blend-mode: darken;
+   min-width: 230px;
+   box-sizing: border-box;
 }
 
-input[type='submit']:nth-of-type(1) {
-   border-right: 1px solid #dbdee0;
+.button:hover {
+   background-color: #ffffff7d;
 }
 
-input[type='submit']:hover {
-   background-color: aliceblue;
+.button span {
+   display: none;
+   margin-top: -25px;
+   margin-left: 3px;
+   color: #fff464;
+}
+
+.button:hover span {
+   display: block;
+   cursor: pointer;
 }
 
 .score {
@@ -121,6 +175,32 @@ input[type='submit']:hover {
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
+   font-family: Verdana, serif;
+   font-weight: 900;
+}
+
+.cats-temp {
+   display: none;
+}
+
+.calc-score {
+   font-size: 42px;
+   padding-top: 12px;
+}
+
+.round {
+   font-size: 16px;
+   border-radius: 4px;
+   padding: 6px;
+   display: inline-block;
+   position: relative;
+   margin-left: 56px;
+   margin-right: 56px;
+   margin-top: 6px;
+   background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
+   box-shadow: 0 8px 24px 0 rgba(151, 157, 170, 0.4), inset 0 0 1px 0 #979daa;
+   color: #000000;
+   letter-spacing: -1px;
 }
 
 .square {
@@ -213,7 +293,7 @@ input[type='submit']:hover {
 
 /* // Just for show */
 .light {
-   background: radial-gradient(ellipse at center, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 60%);
+   background: radial-gradient(ellipse at center, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 65%);
    width: 600px;
    height: 600px;
    background-blend-mode: lighten;
