--- a/style.css
+++ b/style.css
@@ -1,37 +1,19 @@
 body {
    display: flex;
-   justify-content: flex-start;
-   align-content: center;
+   justify-content: center;
+   align-items: center;
    flex-direction: column;
-   height: 100vh;
+   height: calc(100vh - 40px);
    padding: 0 1%;
    background-color: aliceblue;
-}
-
-.game-over {
-   position: absolute;
-   display: none;
-   background-color: #ffffff;
-   border-radius: 10px;
-   box-shadow: 0 8px 24px 0 rgba(151, 157, 170, 0.4), inset 0 0 1px 0 #979daa;
-   left: 0;
-   right: 0;
-   margin: 0 auto;
-   bottom: 0;
-   max-width: 50%;
-   height: fit-content;
-   top: 40%;
-   transform: translateY(-50%);
-   z-index: 30;
-   padding: 24px;
+   position: relative;
 }
 
 .header {
    background-color: transparent;
-   margin-top: 0px;
-   margin-left: -8px;
-   margin-bottom: 32px;
-   max-width: 100%;
+   max-width: 600px;
+   margin-left: -18px;
+   margin-bottom: 24px;
 }
 
 .first {
@@ -71,9 +53,26 @@ h1 {
    letter-spacing: 6px;
 }
 
+.game-over {
+   position: absolute;
+   display: none;
+   background-color: #ffffff;
+   border-radius: 10px;
+   box-shadow: 0 8px 24px 0 rgba(151, 157, 170, 0.4), inset 0 0 1px 0 #979daa;
+   left: 0;
+   right: 0;
+   margin: 0 auto;
+   bottom: 0;
+   width: 460px;
+   max-width: 80%;
+   height: fit-content;
+   top: 40%;
+   z-index: 30;
+}
+
 #sorry {
    font-size: 22px;
-   margin-bottom: 24px;
+   padding: 24px;
    font-family: Verdana, serif;
    display: flex;
    flex-wrap: wrap;
@@ -113,7 +112,7 @@ h1 {
    height: 600px;
    flex-wrap: wrap;
    margin: 0 auto;
-   position: relative;
+   /* position: relative; */
    background-color: #ffffff;
    box-shadow: 0 8px 24px 0 rgba(151, 157, 170, 0.4), inset 0 0 1px 0 #979daa;
    overflow: hidden;
@@ -275,6 +274,7 @@ h1 {
 
 /* Titling gamebox */
 .image-shadow:after {
+   -webkit-transform: scale(0.95) translateY(36px) translateZ(-30px);
    transform: scale(0.95) translateY(36px) translateZ(-30px);
    filter: blur(20px);
    opacity: 0.9;
@@ -283,6 +283,7 @@ h1 {
    width: 100%;
    height: 100%;
    z-index: -1;
+   -webkit-transition: filter 0.3s ease;
    transition: filter 0.3s ease;
 }
 
@@ -304,12 +305,19 @@ h1 {
 /* // =========================== */
 
 .js-tilt-container {
+   -webkit-transition: transform 0.1s ease;
+   -webkit-transform: rotateX(0) rotateY(0);
+   -webkit-transform-style: preserve-3d;
    transition: transform 0.1s ease;
    transform: rotateX(0) rotateY(0);
    transform-style: preserve-3d;
 }
+
 .leave {
-   transform: rotateX(0) rotateY(0) !important;
-   transition-timing-function: cubic-bezier(0.42, 0, 0, 1) !important;
+   -webkit-transform: rotateX(0) rotateY(0);
+   -webkit-transition-timing-function: cubic-bezier(0.42, 0, 0, 1);
+   -webkit-transition-duration: 1.5s;
+   transform: rotateX(0) rotateY(0);
+   transition-timing-function: cubic-bezier(0.42, 0, 0, 1);
    transition-duration: 1.5s;
 }
