--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
    flex-direction: column;
    height: calc(100vh - 40px);
    padding: 0 1%;
-   background-color: aliceblue;
+   background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff8a 100%);
    position: relative;
 }
 
@@ -13,7 +13,7 @@ body {
    background-color: transparent;
    max-width: 600px;
    margin-left: -18px;
-   margin-bottom: 24px;
+   margin-bottom: 32px;
 }
 
 .first {
@@ -111,11 +111,7 @@ h1 {
    width: 600px;
    height: 600px;
    flex-wrap: wrap;
-   margin: 0 auto;
-   /* position: relative; */
-   background-color: #ffffff;
-   box-shadow: 0 8px 24px 0 rgba(151, 157, 170, 0.4), inset 0 0 1px 0 #979daa;
-   overflow: hidden;
+   position: relative;
 }
 
 .container {
@@ -142,6 +138,7 @@ h1 {
    mix-blend-mode: darken;
    min-width: 230px;
    box-sizing: border-box;
+   display: none;
 }
 
 .button:hover {
@@ -165,7 +162,6 @@ h1 {
    height: 100px;
    width: 100px;
    border-radius: 100px;
-   background: #ffffff;
    margin: 0 auto;
    left: 0;
    right: 0;
@@ -173,9 +169,14 @@ h1 {
    display: flex;
    flex-direction: column;
    align-items: center;
-   justify-content: space-between;
+   justify-content: center;
    font-family: Verdana, serif;
    font-weight: 900;
+   background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%) !important;
+   text-transform: uppercase;
+   letter-spacing: -2px;
+   font-size: 28px;
+   color: #6d5bdc;
 }
 
 .cats-temp {
@@ -202,12 +203,6 @@ h1 {
    letter-spacing: -1px;
 }
 
-.square {
-   position: relative;
-   width: 50%;
-   height: auto;
-}
-
 #red {
    background: url('http://sohme.com/wp-content/uploads/2015/07/red-180x180.png');
    background-size: 200%;
@@ -232,6 +227,14 @@ h1 {
    background-position: center;
 }
 
+.square {
+   width: 49%;
+   margin: 0.5%;
+   height: auto;
+   border-radius: 10px;
+   box-shadow: 0 8px 24px 0 rgba(151, 157, 170, 0.4), inset 0 0 1px 0 #979daa;
+}
+
 .flash {
    -webkit-animation-name: flash-animation;
    -webkit-animation-duration: 1s;
@@ -240,6 +243,11 @@ h1 {
    animation-duration: 1s;
    animation-iteration-count: 1;
    animation-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
+   width: 49%;
+   margin: 0.5%;
+   height: auto;
+   border-radius: 10px;
+   box-shadow: 0 8px 24px 0 rgba(151, 157, 170, 0.4), inset 0 0 1px 0 #979daa;
 }
 
 @-webkit-keyframes flash-animation {
