--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
    display: flex;
-   justify-content: center;
+   justify-content: space-evenly;
    align-items: center;
    flex-direction: column;
    height: calc(100vh - 40px);
@@ -13,7 +13,7 @@ body {
    background-color: transparent;
    max-width: 600px;
    margin-left: -18px;
-   margin-bottom: 32px;
+   margin-bottom: 12px;
 }
 
 .first {
