--- a/style.css
+++ b/style.css
@@ -9,48 +9,53 @@ body {
    position: relative;
 }
 
-.header {
-   background-color: transparent;
-   max-width: 600px;
-   margin-left: -18px;
-   margin-bottom: 12px;
-}
-
-.first {
-   position: relative;
-   text-align: left;
+#first {
    color: #6fd956;
-   top: 6px;
-   left: 16px;
+   left: -8px;
+   margin-top: 2px;
 }
 
-.second {
-   position: relative;
-   margin-top: -86px;
-   left: 16px;
+#second {
    color: #ff4942;
+   left: -8px;
+   margin-top: -2px;
 }
 
-.third {
-   position: relative;
-   margin-top: -86px;
-   left: 8px;
+#third {
    color: #fff464;
+   left: -20px;
 }
 
-.fourth {
-   position: relative;
-   margin-top: -86px;
-   left: 12px;
+#fourth {
    color: #465aff;
    opacity: 0.8;
+   left: -12px;
 }
 
 h1 {
-   font-size: 72px;
-   font-family: Verdana, serif;
+   position: absolute;
+   left: 0;
+   right: 0;
    margin: 0 auto;
+   width: fit-content;
+   font-size: calc(32px + 3.8vw);
+   font-family: Verdana, serif;
    letter-spacing: 6px;
+}
+
+.appear {
+   animation: fade-in-move-down 0.7s;
+}
+
+@keyframes fade-in-move-down {
+   0% {
+      opacity: 0;
+      transform: translateY(-3rem);
+   }
+   100% {
+      opacity: 1;
+      transform: translateY(0);
+   }
 }
 
 .game-over {
@@ -61,12 +66,12 @@ h1 {
    box-shadow: 0 8px 24px 0 rgba(151, 157, 170, 0.4), inset 0 0 1px 0 #979daa;
    left: 0;
    right: 0;
-   margin: 0 auto;
+   margin: auto;
+   top: 0;
    bottom: 0;
    width: 460px;
    max-width: 80%;
    height: fit-content;
-   top: 40%;
    z-index: 30;
 }
 
@@ -93,6 +98,7 @@ h1 {
    font-weight: bold;
    letter-spacing: -1px;
    font-size: 20px;
+   box-sizing: content-box;
 }
 
 .start-over:hover {
@@ -112,49 +118,7 @@ h1 {
    height: 600px;
    flex-wrap: wrap;
    position: relative;
-}
-
-.container {
-   margin: 32px auto 12px;
-   max-width: 600px;
-   width: 100%;
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: space-around;
-   align-items: center;
-   box-sizing: content-box;
-}
-
-.button {
-   border: none;
-   font-size: 22px;
-   text-align: center;
-   padding: 12px 0px;
-   font-family: Verdana, serif;
-   font-weight: 900;
-   letter-spacing: -1px;
-   text-transform: uppercase;
-   color: #465aff;
-   mix-blend-mode: darken;
-   min-width: 230px;
-   box-sizing: border-box;
-   display: none;
-}
-
-.button:hover {
-   background-color: #ffffff7d;
-}
-
-.button span {
-   display: none;
-   margin-top: -25px;
-   margin-left: 3px;
-   color: #fff464;
-}
-
-.button:hover span {
-   display: block;
-   cursor: pointer;
+   margin-top: 96px;
 }
 
 .score {
@@ -162,20 +126,21 @@ h1 {
    height: 100px;
    width: 100px;
    border-radius: 100px;
-   margin: 0 auto;
+   top: 0;
+   bottom: 0;
    left: 0;
    right: 0;
-   transform: translateY(250px);
+   margin: auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-family: Verdana, serif;
    font-weight: 900;
-   background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%) !important;
+   background: linear-gradient(90deg, #e3ffe7 0%, #d9e7ff 100%);
    text-transform: uppercase;
    letter-spacing: -2px;
-   font-size: 28px;
+   font-size: 24px;
    color: #6d5bdc;
 }
 
@@ -204,25 +169,25 @@ h1 {
 }
 
 #red {
-   background: url('http://sohme.com/wp-content/uploads/2015/07/red-180x180.png');
+   background-color: red;
    background-size: 200%;
    background-position: center;
 }
 
 #blue {
-   background: url('http://sohme.com/wp-content/uploads/2015/07/blue.png');
+   background-color: blue;
    background-size: 200%;
    background-position: center;
 }
 
 #green {
-   background: url('https://www.trialsbits.co.uk/images/thick_vinyl_sheet_green.jpg');
+   background-color: #38cd0b;
    background-size: 200%;
    background-position: center;
 }
 
 #yellow {
-   background: url('https://www.labelmaster.com/product/image/medium/btv06y_0.jpg');
+   background-color: #fff12d;
    background-size: 200%;
    background-position: center;
 }
@@ -233,6 +198,7 @@ h1 {
    height: auto;
    border-radius: 10px;
    box-shadow: 0 8px 24px 0 rgba(151, 157, 170, 0.4), inset 0 0 1px 0 #979daa;
+   z-index: -1;
 }
 
 .flash {
@@ -248,6 +214,7 @@ h1 {
    height: auto;
    border-radius: 10px;
    box-shadow: 0 8px 24px 0 rgba(151, 157, 170, 0.4), inset 0 0 1px 0 #979daa;
+   z-index: -1;
 }
 
 @-webkit-keyframes flash-animation {
@@ -290,7 +257,6 @@ h1 {
    position: absolute;
    width: 100%;
    height: 100%;
-   z-index: -1;
    -webkit-transition: filter 0.3s ease;
    transition: filter 0.3s ease;
 }
@@ -300,7 +266,6 @@ h1 {
    background-size: cover;
 }
 
-/* // Just for show */
 .light {
    background: radial-gradient(ellipse at center, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0) 65%);
    width: 600px;
