--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
    display: flex;
-   justify-content: space-evenly;
+   /* justify-content: space-evenly; */
    align-items: center;
    flex-direction: column;
    height: calc(100vh - 40px);
@@ -42,7 +42,7 @@ h1 {
    font-size: calc(18px + 3.8vw);
    font-family: Verdana, serif;
    letter-spacing: 6px;
-   top: 24px;
+   top: 32px;
 }
 
 .appear {
@@ -124,7 +124,7 @@ h1 {
    height: 600px;
    flex-wrap: wrap;
    position: relative;
-   margin-top: 96px;
+   margin-top: calc(78px + 4.6vw);
 }
 
 #red {
